--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>Em sinh nhật vui vẻ nhaaa</title>
+    <title>Thầy sinh nhật vui vẻ nhaaa</title>
 </head>
 <body>
     <div class="container">
@@ -74,7 +74,7 @@
             <div class="boxMail-container">
                 <div class="card1">
                     <div class="userImg">
-                        <img src="thuphuong.jpg" alt="">
+                        <img src="thaylong.jpg" alt="">
                     </div>
                     <h3>Happy birthday</h3>
                     <div class="imageCute">
@@ -83,22 +83,8 @@
                 </div>
                 <div class="card2">
                     <div class="card2-content">
-                        <h3>Gửi em!</h3>
-                        <h2>Ú òaaaaaa. Hôm nay là một ngày đặc biệt đối
-                         với một người đặc biệt nì. Chúc e có một ngày sinh nhật 
-                         thật ý nghĩa, vui vẻ vẻ, hạnh phúc bên gia đình và bạn bè. 
-                         Chúc e sang tuổi mới lun lun vui vẻ, phải lun lun vui tươi 
-                         không cần tưới nháaaaa hahah, ngày càng xưn đẹp hơn những năm 
-                         khác nì gấp mũ n lần lun cho ae cây xoài hahaha , học giỏi nì 
-                         nhưng mà học vẫn phải chú ý giữ gìn sức khỏe em nhé và đặc bịt 
-                         sớm có bồ như em mong muốn nháaaaa:3 . Tuy a không ở gần em và 
-                         có những món quà ý nghĩa đối với em nhưng a vẫn lun mong muốn những 
-                         điều tốt đẹp đến với em. Anh chỉ biết dùng vẻ đẹp của IT làm quà 
-                         tặng em tuy chỉ là 1 giao diện ko phải là 1 món quà vật chất nhưng 
-                         a mong muốn rằng nó sẽ là 1 món quà ý nghĩa, 1 món quà tinh thần nào 
-                         đó trong ngày đặc biệt của em. Và cuối cùng a chúc 
-                         cô gái đặc biệt sinh nhật vui vẻ nhaaaaaaaaaa. Chúc em tất cả những điều 
-                         tốt đẹp nhấtttttt nhéeeeeeee hihi^^</h2>
+                        <h3>Gửi thầy!</h3>
+                        <h2>.....</h2>
                          <div class="imageCute2">
                             <img src="cute2.png" alt="">
                          </div>
